header__buttons: fix overlapping bug on mobile
header:
• rename header__buttons-shower to -opener;
• fix header__buttons position on narrow screens when it displays by clicking on opener icon.
buttons element overlapped opener icon so if opener icon was clicked, clicking on registration button occured;
• change buttons position to column and shift to right in header__buttons element

--- a/src/components/headers-and-footers/header/header.scss
+++ b/src/components/headers-and-footers/header/header.scss
@@ -220,7 +220,7 @@
     justify-self: end;
     display: flex;
 
-    &-shower {
+    &-opener {
       @extend %text-gradient;
       display: none;
       grid-area: sign-in;
@@ -240,11 +240,16 @@
       display: none;
       position: absolute;
       right: 0;
+      top: 100%;
       border-radius: 2px;
       box-shadow: 0px 4px 5px 2px $darkShade5;
       border: $lightBorder;
       background-color: #fff;
       padding: 10px;
+      width: fit-content;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      z-index: 1000;
 
       &:hover {
         display: flex;
@@ -258,6 +263,11 @@
 
   &__sign-in-button {
     margin-right: var(--relative-margin);
+
+    @media (max-width: 500px) {
+      margin-right: 0;
+      margin-bottom: var(--relative-margin);
+    }
   }
 
   &__user-name {
